Reformatted Java Code